--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -1,5 +1,6 @@
+application.args=
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.java,**/*.form,**/*.xcu,**/*.xcs,**/*.idl,**/*manifest.xml
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -7,22 +8,20 @@ build.generated.dir=${build.dir}/generated
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/OpenALP.jar
+dist.jar=${dist.dir}/openALP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.OpenALP-src=src
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Lib.classpath}
+    ${libs.OpenOffice.org 3.0.classpath}:\
+    ${libs.sqlite.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -31,11 +30,10 @@ javac.target=1.5
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit.classpath}
 javadoc.additionalparam=
 javadoc.author=false
-javadoc.encoding=${source.encoding}
+javadoc.encoding=
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -44,8 +42,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=LanguageBuilder.StartLanguageBuilder
-manifest.file=manifest.mf
+main.class=net.openalp.languagebuilder.StartLanguageBuilder
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
 run.classpath=\
@@ -58,5 +55,5 @@ run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
-source.encoding=UTF-8
-src.dir=${file.reference.OpenALP-src}
+src.dir=src
+test.src.dir=test
