--- a/build.xml
+++ b/build.xml
@@ -2,14 +2,9 @@
 <!-- You may freely edit this file. See commented blocks below for -->
 <!-- some examples of how to customize the build. -->
 <!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="OpenALP" default="default" basedir=".">
-    <description>Builds, tests, and runs the project OpenALP.</description>
-    <import file="nbproject/build-impl.xml"/>
+<project name="openALP" default="default" basedir=".">
+    <description>Builds, tests, and runs the project extension project.</description>
+    <import file="nbproject/build-uno-impl.xml"/>
     <!--
 
     There exist several targets which are by default empty and which can be 
@@ -28,6 +23,8 @@
       -post-compile-test-single: called after javac compilation of single JUunit test
       -pre-jar:                  called before JAR building
       -post-jar:                 called after JAR building
+      -pre-uno-package:          called before OXT creation
+      -post-uno-package:         called after OXT creation
       -post-clean:               called after cleaning build products
 
     (Targets beginning with '-' are not intended to be called on their own.)
@@ -59,7 +56,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="OpenALP-impl.jar">
+        <target name="run" depends="TypeBrowser2-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
@@ -71,4 +68,5 @@
     nbproject/build-impl.xml file. 
 
     -->
+
 </project>
