--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -1,4 +1,9 @@
 application.args=
+application.title=openALP
+application.vendor=oni
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.tab-size=8
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.project.text-limit-width=80
+auxiliary.org-netbeans-modules-editor-indent.CodeStyle.usedProfile=default
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form,**/*.xcu,**/*.xcs,**/*.idl,**/*manifest.xml
 # This directory is removed when the project is cleaned:
@@ -42,6 +47,12 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=local
+jnlp.codebase.url=file:/K:/Documents%20and%20Settings/oni/My%20Documents/Projects/OpenALP/trunk/dist/
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.offline-allowed=false
+jnlp.signed=false
 main.class=net.openalp.languagebuilder.StartLanguageBuilder
 meta.inf.dir=${src.dir}/META-INF
 platform.active=default_platform
